<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocationDemo</string>
    <string name="sample_hwlocation_description">Huawei Location Demo</string>

    <string name="hwlocation_getLastLocation">getLastLocation</string>
    <string name="hwlocation_getLocationAvailability">getLocationAvailability</string>
    <string name="hwlocation_locationupdates">location updates</string>
    <string name="hwlocation_requestLocationUpdatesWithCallback">requestLocationUpdates with callback</string>
    <string name="hwlocation_removeLocationUpdatesWithCallback">removeLocationUpdates with callback</string>
    <string name="hwlocation_requestLocationUpdatesWithIntent">requestLocationUpdates with intent</string>
    <string name="hwlocation_removeLocationUpdatesWithIntent">removeLocationUpdates with intent</string>
    <string name="hwlocation_setMockLocation">setMockLocation</string>
    <string name="hwlocation_setMockMode">setMockMode</string>
    <string name="hwlocation_mockWarning">Enable the mobile phone to allow mock location \nand  set mockmode true</string>
    <string name="hwlocation_activity">ActivityRecognition Update</string>
    <string name="hwlocation_activity_transition">ActivityTransition Update</string>

    <!-- Activity detection strings -->
    <string name="hwlocation_activity_in_vehicle">In a vehicle</string>
    <string name="hwlocation_activity_on_bicycle">On a bicycle</string>
    <string name="hwlocation_activity_on_foot">On foot</string>
    <string name="hwlocation_activity_running">Running</string>
    <string name="hwlocation_activity_still">Still</string>
    <string name="hwlocation_activity_tilting">Tilting</string>
    <string name="hwlocation_activity_unknown">Unknown activity</string>
    <string name="hwlocation_activity_walking">Walking</string>
    <string name="hwlocation_activity_unidentifiable_activity">Unidentifiable activity: %1$d</string>
    <string name="hwlocation_activity_detected_activities_title">Detected Activities</string>
    <string name="hwlocation_activity_request_activity_updates">Request updates</string>
    <string name="hwlocation_activity_remove_activity_updates">Remove updates</string>
    <string name="hwlocation_activity_activity_updates_enabled">Activity updates enabled</string>
    <string name="hwlocation_activity_activity_updates_not_enabled">Failed to enable activity updates</string>
    <string name="hwlocation_activity_activity_updates_removed">Activity updates removed</string>
    <string name="hwlocation_activity_activity_updates_not_removed">Failed to remove activity updates</string>
    <string name="hwlocation_activity_percent">%1$d%%</string>
    <string name="hwlocation_activity_sample_request_activity_transition">RequestActivityTransition Demo</string>
</resources>
