<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_title_margin"
        android:paddingTop="@dimen/activity_title_margin"
        android:paddingRight="@dimen/activity_title_margin"
        tools:context=".HuaweiLocationActivity">

        <TextView
            style="@style/TitleStyle"
            android:text="@string/sample_hwlocation_description" />
        <Button
            android:id="@+id/location_requestLocationUpdatesWithIntent"
            style="@style/ButtonStyle"
            android:text="@string/hwlocation_requestLocationUpdatesWithIntent" />


        <Button
            android:id="@+id/location_requestLocationUpdatesWithCallback"
            style="@style/ButtonStyle"
            android:text="@string/hwlocation_requestLocationUpdatesWithCallback" />

        <Button
            android:id="@+id/location_setMockMode"
            style="@style/ButtonStyle"
            android:text="@string/hwlocation_setMockMode" />

        <Button
            android:id="@+id/location_setMockLocation"
            style="@style/ButtonStyle"
            android:text="@string/hwlocation_setMockLocation" />

        <Button
            android:id="@+id/location_getLocationAvailability"
            style="@style/ButtonStyle"
            android:text="@string/hwlocation_getLocationAvailability" />

        <Button
            android:id="@+id/location_getLastLocation"
            style="@style/ButtonStyle"
            android:text="@string/hwlocation_getLastLocation" />

        <Button
            android:id="@+id/location_activity_update"
            style="@style/ButtonStyle"
            android:text="@string/hwlocation_activity" />

        <Button
            android:id="@+id/location_activity_transition_update"
            style="@style/ButtonStyle"
            android:text="@string/hwlocation_activity_transition" />

        <Button
            android:id="@+id/GeoFence"
            style="@style/ButtonStyle"
            android:text="GeoFence" />

        <Button
            android:id="@+id/locationHD"
            style="@style/ButtonStyle"
            android:text="LocationHD" />

    </LinearLayout>
</ScrollView>