<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/request_activity_updates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/narrow_space"
            android:onClick="requestActivityUpdatesButtonHandler"
            android:text="@string/hwlocation_activity_request_activity_updates" />

        <Button
            android:id="@+id/remove_activity_updates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/request_activity_updates_button"
            android:layout_toEndOf="@id/request_activity_updates_button"
            android:layout_marginTop="@dimen/narrow_space"
            android:onClick="removeActivityUpdatesButtonHandler"
            android:text="@string/hwlocation_activity_remove_activity_updates" />
    </RelativeLayout>

    <EditText
        android:id="@+id/detectionIntervalMillis"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:enabled="true"
        android:gravity="top"
        android:maxLines="1"
        android:hint="pls input callback time(millisecond) if data is empty it will be set as 300000"
        android:scrollbars="vertical"></EditText>

    <TextView
        android:id="@+id/detected_activities_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/narrow_space"
        android:layout_marginTop="@dimen/wide_space"
        android:text="@string/hwlocation_activity_detected_activities_title"
        android:textSize="@dimen/headline_text_size" />

    <ListView
        android:id="@+id/detected_activities_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
